clang/test/BSC/Negative/Ownership/Owned/owned_temporary_funCall3/owned_temporary_funCall3.cbs
// RUN: %clang_cc1 -verify %s

int* _Owned func1(int* _Owned p) { return p; }
int _Owned func2(int _Owned a) { return a; } // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}}
int* func3(int* p) { return p; }
void test1(int* _Owned p, int _Owned a, int* p2) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    func1(p);   // expected-error {{memory leak because temporary variable 'func1(p)' is _Owned or indirect _Owned type, please fix it}}
    *func1(p);  // expected-error {{memory leak because temporary variable 'func1(p)' is _Owned or indirect _Owned type, please fix it}}
    int res1 = *func1(p);   // expected-error {{memory leak because temporary variable 'func1(p)' is _Owned or indirect _Owned type, please fix it}}
    func2(a);   // expected-error {{memory leak because temporary variable 'func2(a)' is _Owned or indirect _Owned type, please fix it}}
    *func2(a);  // expected-error {{indirection requires pointer operand ('_Owned int' invalid)}}
    func3(p2);
    *func3(p2); // expected-warning {{expression result unused}}
    int res2 = *func3(p2);
}

void test2(int* _Owned p1, int* _Owned p2) {
    if (p1 == p2) {
        return;
    }
    if (func1(p1) == p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (p1 == func1(p2)) {  // expected-error {{memory leak because temporary variable 'func1(p2)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (func1(p1) == func1(p2)) {   // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}} // expected-error {{memory leak because temporary variable 'func1(p2)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (func1(p1) >= p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (func1(p1) > p2) {   // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (func1(p1) <= p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (func1(p1) < p2) {   // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
    if (func1(p1) != p2) {  // expected-error {{memory leak because temporary variable 'func1(p1)' is _Owned or indirect _Owned type, please fix it}}
        return;
    }
}